# Nuitka

./: .cursorrules  .gitignore  .gitmodules  .landscape.yml  .project  .pydevproject  .sourcery.yaml  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  Changelog.rst  Credits.rst  Developer_Manual.rst  Dmm.py  LICENSE-RUNTIME.txt  LICENSE.txt  MANIFEST.in  README.rst  README.txt  SECURITY.md  ShlibUsing.py  Standard-Plugins-Documentation.rst  UserPlugin-Creation.rst  Using-Plugin-Options.rst  azure-pipelines.yml  compile_flags.txt  ctypes_test.py  nuitka.manpages  py-file.bat  py-file.sh  pyproject.toml  requirements-devel.txt  requirements.txt  rsaUsing.py  run_all.py  run_pbuilder.py  run_pbuilder_all.py  setup.py  test_caching.py  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Testings_examples/: Specialized_C_containers.c  ll.c  setup.py  test.py
debian/: README.source  changelog  control  copyright  docs  links  nuitka.bash-completion  nuitka.doc-base  nuitka.docs  nuitka.install  nuitka.lintian-overrides  nuitka.manpages  rules  source.lintian-overrides  upstream-signing-key.pgp  watch
doc/: Doxyfile  Doxyfile.template  custom.css  nuitka-man-include.txt  nuitka-run.1  nuitka.1  page-styles.txt  py-file.bat  py-file.sh
lib/: hints.py
misc/: Dockerfile.appimage  Microsoft.VC90.CRT.manifest  autoformat.py  check-release  check-release.py  check-release.sh  check-with-pylint  clean-up.sh  codespell-ignore.txt  compare-nuitka-versions.py  compile-python-mac.sh  (+41 more)
tests/distutils/example_pyproject_2/: pyproject.toml
tests/distutils/example_pyproject_2/src/: main.py
(+1891 files in other folders)
